// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`swift > should generate the correct code with styles 1`] = `
"import SwiftUI

struct MyComponent: View {

var body: some View {
  VStack {
    VStack() {Text(\\"Hello world\\")}
    .padding(10)
  }
}
}"
`;

exports[`swift > svelte > Javascript Test > basic 1`] = `
"import SwiftUI

struct MyComponent: View {

var body: some View {
  VStack {
    VStack() {TextField(\\"\\", text: $input1)
    Text(\\"Hello! I can run in React, Vue, Solid, or Liquid!\\")}
  }
}
}"
`;

exports[`swift > svelte > Javascript Test > bindGroup 1`] = `
"import SwiftUI

struct MyComponent: View {

var body: some View {
  VStack {
    VStack() {TextField(\\"\\", text: $input1)
    TextField(\\"\\", text: $input2)
    TextField(\\"\\", text: $input3)
    VStack() {}
    VStack() {}
    TextField(\\"\\", text: $input4)
    TextField(\\"\\", text: $input5)
    TextField(\\"\\", text: $input6)
    TextField(\\"\\", text: $input7)
    VStack() {Text(\\"Tortilla:\\")
    Text(state.tortilla.toString())}
    VStack() {Text(\\"Fillings:\\")
    Text(state.fillings.toString())}}
  }
}
}"
`;

exports[`swift > svelte > Javascript Test > bindProperty 1`] = `
"import SwiftUI

struct MyComponent: View {

var body: some View {
  VStack {
    TextField(\\"\\", text: $input1)
  }
}
}"
`;

exports[`swift > svelte > Javascript Test > classDirective 1`] = `
"import SwiftUI

struct MyComponent: View {

var body: some View {
  VStack {
    TextField(\\"\\", text: $input1)
  }
}
}"
`;

exports[`swift > svelte > Javascript Test > context 1`] = `
"import SwiftUI

struct MyComponent: View {

var body: some View {
  VStack {
    VStack() {Text(state.activeTab.toString())}
  }
}
}"
`;

exports[`swift > svelte > Javascript Test > each 1`] = `
"import SwiftUI

struct MyComponent: View {

var body: some View {
  VStack {
    VStack() {ForEach(state.numbers, id: \\\\.self) { num in VStack() {Text(num.toString())} }}
  }
}
}"
`;

exports[`swift > svelte > Javascript Test > eventHandlers 1`] = `
"import SwiftUI

struct MyComponent: View {

var body: some View {
  VStack {
    VStack() {VStack() {Text(\\"Log\\")}
    VStack() {Text(\\"Log\\")}
    VStack() {Text(\\"Log\\")}}
  }
}
}"
`;

exports[`swift > svelte > Javascript Test > html 1`] = `
"import SwiftUI

struct MyComponent: View {

var body: some View {
  VStack {
    VStack() {}
  }
}
}"
`;

exports[`swift > svelte > Javascript Test > ifElse 1`] = `
"import SwiftUI

struct MyComponent: View {

var body: some View {
  VStack {
    if state.show {
      VStack() {Text(\\"Hide\\")}
    }
  }
}
}"
`;

exports[`swift > svelte > Javascript Test > imports 1`] = `
"import SwiftUI

struct MyComponent: View {

var body: some View {
  VStack {
    VStack() {Button() {Slot() {}}}
  }
}
}"
`;

exports[`swift > svelte > Javascript Test > lifecycleHooks 1`] = `
"import SwiftUI

struct MyComponent: View {

var body: some View {
  VStack {
    VStack() {}
  }
}
}"
`;

exports[`swift > svelte > Javascript Test > reactive 1`] = `
"import SwiftUI

struct MyComponent: View {

var body: some View {
  VStack {
    VStack() {TextField(\\"\\", text: $input1)
    Text(\\"Lowercase:\\")
    Text(state.lowercaseName.toString())}
  }
}
}"
`;

exports[`swift > svelte > Javascript Test > reactiveWithFn 1`] = `
"import SwiftUI

struct MyComponent: View {

var body: some View {
  VStack {
    VStack() {TextField(\\"\\", text: $input1)
    TextField(\\"\\", text: $input2)
    Text(\\"Result:\\")
    Text(state.result.toString())}
  }
}
}"
`;

exports[`swift > svelte > Javascript Test > slots 1`] = `
"import SwiftUI

struct MyComponent: View {

var body: some View {
  VStack {
    VStack() {Slot() {Text(\\"default\\")}
    Slot() {VStack() {Text(\\"default\\")}}}
  }
}
}"
`;

exports[`swift > svelte > Javascript Test > style 1`] = `
"import SwiftUI

struct MyComponent: View {

var body: some View {
  VStack {
    TextField(\\"\\", text: $undefined)
  }
}
}"
`;

exports[`swift > svelte > Javascript Test > textExpressions 1`] = `
"import SwiftUI

struct MyComponent: View {

var body: some View {
  VStack {
    VStack() {Text(\\"normal:\\")
    Text(state.a + state.b.toString())
    VStack() {}
    Text(\\"conditional\\")
    Text(state.a > 2 ? 'hello' : 'bye'.toString())}
  }
}
}"
`;

exports[`swift > svelte > Typescript Test > basic 1`] = `
"import SwiftUI

struct MyComponent: View {

var body: some View {
  VStack {
    VStack() {TextField(\\"\\", text: $input1)
    Text(\\"Hello! I can run in React, Vue, Solid, or Liquid!\\")}
  }
}
}"
`;

exports[`swift > svelte > Typescript Test > bindGroup 1`] = `
"import SwiftUI

struct MyComponent: View {

var body: some View {
  VStack {
    VStack() {TextField(\\"\\", text: $input1)
    TextField(\\"\\", text: $input2)
    TextField(\\"\\", text: $input3)
    VStack() {}
    VStack() {}
    TextField(\\"\\", text: $input4)
    TextField(\\"\\", text: $input5)
    TextField(\\"\\", text: $input6)
    TextField(\\"\\", text: $input7)
    VStack() {Text(\\"Tortilla:\\")
    Text(state.tortilla.toString())}
    VStack() {Text(\\"Fillings:\\")
    Text(state.fillings.toString())}}
  }
}
}"
`;

exports[`swift > svelte > Typescript Test > bindProperty 1`] = `
"import SwiftUI

struct MyComponent: View {

var body: some View {
  VStack {
    TextField(\\"\\", text: $input1)
  }
}
}"
`;

exports[`swift > svelte > Typescript Test > classDirective 1`] = `
"import SwiftUI

struct MyComponent: View {

var body: some View {
  VStack {
    TextField(\\"\\", text: $input1)
  }
}
}"
`;

exports[`swift > svelte > Typescript Test > context 1`] = `
"import SwiftUI

struct MyComponent: View {

var body: some View {
  VStack {
    VStack() {Text(state.activeTab.toString())}
  }
}
}"
`;

exports[`swift > svelte > Typescript Test > each 1`] = `
"import SwiftUI

struct MyComponent: View {

var body: some View {
  VStack {
    VStack() {ForEach(state.numbers, id: \\\\.self) { num in VStack() {Text(num.toString())} }}
  }
}
}"
`;

exports[`swift > svelte > Typescript Test > eventHandlers 1`] = `
"import SwiftUI

struct MyComponent: View {

var body: some View {
  VStack {
    VStack() {VStack() {Text(\\"Log\\")}
    VStack() {Text(\\"Log\\")}
    VStack() {Text(\\"Log\\")}}
  }
}
}"
`;

exports[`swift > svelte > Typescript Test > html 1`] = `
"import SwiftUI

struct MyComponent: View {

var body: some View {
  VStack {
    VStack() {}
  }
}
}"
`;

exports[`swift > svelte > Typescript Test > ifElse 1`] = `
"import SwiftUI

struct MyComponent: View {

var body: some View {
  VStack {
    if state.show {
      VStack() {Text(\\"Hide\\")}
    }
  }
}
}"
`;

exports[`swift > svelte > Typescript Test > imports 1`] = `
"import SwiftUI

struct MyComponent: View {

var body: some View {
  VStack {
    VStack() {Button() {Slot() {}}}
  }
}
}"
`;

exports[`swift > svelte > Typescript Test > lifecycleHooks 1`] = `
"import SwiftUI

struct MyComponent: View {

var body: some View {
  VStack {
    VStack() {}
  }
}
}"
`;

exports[`swift > svelte > Typescript Test > reactive 1`] = `
"import SwiftUI

struct MyComponent: View {

var body: some View {
  VStack {
    VStack() {TextField(\\"\\", text: $input1)
    Text(\\"Lowercase:\\")
    Text(state.lowercaseName.toString())}
  }
}
}"
`;

exports[`swift > svelte > Typescript Test > reactiveWithFn 1`] = `
"import SwiftUI

struct MyComponent: View {

var body: some View {
  VStack {
    VStack() {TextField(\\"\\", text: $input1)
    TextField(\\"\\", text: $input2)
    Text(\\"Result:\\")
    Text(state.result.toString())}
  }
}
}"
`;

exports[`swift > svelte > Typescript Test > slots 1`] = `
"import SwiftUI

struct MyComponent: View {

var body: some View {
  VStack {
    VStack() {Slot() {Text(\\"default\\")}
    Slot() {VStack() {Text(\\"default\\")}}}
  }
}
}"
`;

exports[`swift > svelte > Typescript Test > style 1`] = `
"import SwiftUI

struct MyComponent: View {

var body: some View {
  VStack {
    TextField(\\"\\", text: $undefined)
  }
}
}"
`;

exports[`swift > svelte > Typescript Test > textExpressions 1`] = `
"import SwiftUI

struct MyComponent: View {

var body: some View {
  VStack {
    VStack() {Text(\\"normal:\\")
    Text(state.a + state.b.toString())
    VStack() {}
    Text(\\"conditional\\")
    Text(state.a > 2 ? 'hello' : 'bye'.toString())}
  }
}
}"
`;
